Fixed overlapping input problems on modals. Changed LoadAttributeDropDown function to pull the grades from the Enum.

--- a/RockWeb/CSS/checkin-core.less
+++ b/RockWeb/CSS/checkin-core.less
@@ -537,6 +537,10 @@ input[type="submit"].btn[disabled="disabled"]
     width: 9em !important;
 }
 
+.person input[type="text"], .person select {
+    width: 95%;
+}
+
 @media screen and (max-width:1240px) {
     input.attended-checkin-keyboard-entry, .keyboard {
         width: 85%;
@@ -545,6 +549,11 @@ input[type="submit"].btn[disabled="disabled"]
     .keyboard a.btn {
         font-size: 2.75em;
     }
+
+    h3 {
+        font-size: 1.428571428571429em;     /* 20px font size / 14px base font size */
+    }
+
 }
 
 @media screen and (max-width:1024px)
